Fixed formatting in SecurityConfig.java and removed unused references in DataLoader.java